--- a/App/res/values/strings.xml
+++ b/App/res/values/strings.xml
@@ -38,4 +38,11 @@
     <!-- Chart page -->
     <string name="chart_title">Chart</string>
     
+    <!-- Settings page -->
+    <string name="settings_title">Settings</string>
+    
+    <!-- Menu page -->
+    <string name="menu_logout_title">Logout</string>
+    <string name="menu_settings_title">Settings</string>
+    
 </resources>
