--- a/App/res/values/strings.xml
+++ b/App/res/values/strings.xml
@@ -57,5 +57,6 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="divider">Divider</string>
+    <string name="clear_button_title">Clear</string>
     
 </resources>
